[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pykada"
version = "0.0.1"
authors = [
  { name="Ryan Malley", email="ryanmalley101@gmail.com" },
]
description = "A handy library for interacting with Verkada APIs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-expression="MIT"
license-files = ["LICENCSE"]

[project.urls]
Homepage = "https://github.com/ryanmalley101/pykada"
Issues = "https://github.com/ryanmalley101/pykada/issues"

[tool.hatch.build.targets.wheel]
packages = ["pykada"]
