[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pykada"
version = "1.0.1"
authors = [
  { name="Ryan Malley", email="ryanmalley101@gmail.com" },
]
description = "A handy library for interacting with Verkada APIs."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-expression="MIT"
license-files = ["LICENCSE"]
dependencies = [
    "numpy~=2.2.6",
    "pytest~=8.4.1",
    "python-dotenv~=1.1.0",
    "python_vlc~=3.0.21203",
    "Requests~=2.32.3",
    "termcolor~=3.1.0",
    "typeguard~=4.4.2",
    "urllib3~=2.5.0",
    "pandas~=2.3.2"
]

#dynamic = ["dependencies"]
#[tool.setuptools.dynamic]
#dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/ryanmalley101/pykada"
Issues = "https://github.com/ryanmalley101/pykada/issues"

[tool.hatch.build.targets.wheel]
packages = ["pykada"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pykada*"] # Finds the 'pykada' directory as a package